Working but the java app is too fast for mysql

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,11 @@ services:
     build: .
     links:
       - mysql:mysql
-    ports:
-      - "3306:3306"
-  
   mysql:
     image: mysql/mysql-server
     environment:
       - MYSQL_DATABASE=toto
-      - MYSQL_USER=root
-      - MYSQL_PASSWORD=root
+      - MYSQL_USER=admin
+      - MYSQL_PASSWORD=admin
+      - MYSQL_ROOT_PASSWORD=root
 
